# Relms-of-Posibility

./: README.md
Cliant/: CMakeCache.txt  CMakeLists.txt  Makefile  ROPs  cmake_install.cmake  compile_commands.json
Cliant/.cache/clangd/index/: main.cpp.47F669387DA93944.idx
Cliant/includes/: rop-cliant.h
Cliant/src/: main.cpp
Common/: CMakeCache.txt  CMakeLists.txt  Makefile  Mods.md  cmake_install.cmake  compile_commands.json  libCommon.so.0  libCommon.so.0.1
Common/.cache/clangd/index/: CommonLib.cpp.F473F9F23217C38D.idx  CommonLib.h.89541CFC4BD2034A.idx  Player.cpp.5BA060DFA46E049E.idx  Player.h.5E6E2E1A72D8FE3D.idx  rop-math.h.40E54E9753D357BC.idx
Common/includes/: CommonLib.h  Debugging.h  Player.h  rop-entity.h  rop-items.h  rop-math.h
Common/src/: CommonLib.cpp  Player.cpp
Notes/: Game-Play.md
Server/: CMakeCache.txt  Makefile  ROPs  Server-Notes.md  cmake_install.cmake  compile_commands.json
Server/.cache/clangd/index/: Server.h.1A80FB6D16E4A27C.idx  main.cpp.EA989010FD316B6A.idx  rop_math.h.B718D3E6ACEB4F32.idx
Server/src/: Makefile  cmake_install.cmake  main.cpp
Server/src/includes/: Server.h  rop_math.h
